feat: Add behaviour for deleting an exhibition with active bookings